<?xml version="1.0" encoding="utf-8"?>
<resources>

    <!-- General -->
    <string name="app_name">InMind</string>
    <string name="action_refresh">Refresh</string>
    <string name="action_archived">Archived Plants</string>
    <string name="action_about">Help</string>
    <string name="action_settings">Settings</string>
    <string name="action_new">New Item</string>
    
    <string name="confirm">You haven\'t finished. Leave?</string>
    <string name="dialog_new">Do you want to create a new topic or a new collection?</string>
    
    <string name="url_server">https://sodiio.media.mit.edu</string>
    <string name="uri_messages">messages</string>
    <string name="uri_plants">plants</string>
    <string name="uri_users">users</string>
    <string name="uri_check">check</string>
    <string name="uri_update">update</string>
    <string name="uri_IV">IV</string>
    
    <string name="hello_world">Hello world!</string>
    <string name="hello">Dummy string :)</string>
    
    <!-- Login -->
    <string name="action_login">Log In</string>
    <string name="action_logout">Log Out</string>
    <string name="username">username</string>
    <string name="password">password</string>
    <string name="waiting_on_server">"Hold on! I'm talking to the server...\n (If you have a lot of messages, this can take a while.)"</string>
    
    <!-- Plants -->
    <string name="action_note">Write a Note</string>
    <string name="plant_smile">Smile</string>
    <string name="plant_water">Water</string>
    <string name="plant_trim">Trim</string>
    <string name="plant_archive">Archive</string>
    <string name="topic_icon">Topic Icon</string>
    
    <string name="show_info">Show Topic</string>
    <string name="hide_info">Hide Topic</string>
    <string name="old_topic_alert">This topic has been inactive. \nPlease update it, write a message, or archive it!</string>
    
    <string name="planter">Collection</string>
    <string name="my_plants">My Collection.</string>
    <string name="default_message">Prompt of the day will appear here.</string>
    
    <string name="plant_name">Topic Page</string>
    
    <string name="new_pot">Start a new topic.</string>
    
    <!-- Collection -->
    <string name="action_discard">Discard</string>
    <string name="collection_fragment">New Collection</string>
    <string name="include">Have this collection include:</string>
    <string name="name_collection">Name your collection</string>
    
    <!-- Pots -->
    <string name="action_done">Done</string>
    <string name="pot_fragment">New Topic</string>
    <string name="name_pot">Name your topic</string>
    <string name="pot">Topic</string>
    <string name="friends">My Group</string>
    <string name="share_with">Share with:</string>
    <string name="select_icon">Icon type:</string>
    <string name="action_help">Icons</string>
    <string-array name="icon_types">
        <item>Plant</item>
        <item>Bird</item>
        <item>Hamster</item>
    </string-array>
    <string name="about_icons">Choose an icon to represent your topic! \n\n
        Plant is good general purpose icon.
        It can also represent progress towards a goal.\n\n
        Bird is for representing wellness, or success. \n\n
        Hamster is good for representing energy or speed.
    </string>
    
    <!--  Note -->
    <string name="note_hint">Write your note here.</string>
    <string name="note_author">Author</string>
    <string name="note_date">Date String</string>
    <string name="note_text">This is the body of the note.</string>
    <string name="send">Send</string>
    
    <!-- User -->
    
    <!-- Preferences -->
    <string name="user_prefs">User Preferences (You shouldn\'t have to touch these.)</string>
    <string name = "title_username_preference">Username</string>
    <string name = "summary_username_preference">Set the username used to communicate with the server.</string>
    <string name = "dialog_username_preference">Enter Your Username</string>
    
    <string name = "title_password_preference">Password</string>
    <string name = "summary_password_preference">Set the password used to communicate with the server.</string>
    <string name = "dialog_password_preference">Enter Your Password</string>
    
    <string name = "title_IV_preference">Initialization Vector (IV)</string>
    <string name = "summary_IV_preference">Don\'t touch! This is set automatically on login.</string>
    <string name = "dialog_IV_preference">Override Your IV</string>
    
    <string name = "title_server_id_preference">Server ID</string>
    <string name = "summary_server_id_preference">Don\'t touch! This is set automatically on login.</string>
    <string name = "dialog_server_id_preference">Override Your Server ID</string>
    
    <string name = "usage_prefs">Usage Preferences</string>
    <string name = "title_prompt_preference">Turn On Prompts</string>
    <string name = "summary_prompt_preference">Prompt daily with a notification.</string>
    
    <string name = "smile_credit">Smile designed by Simple Icons from the Noun Project</string>
</resources>
