<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <item
        android:id="@+id/action_discard"
        android:orderInCategory="9"
        android:title="@string/action_discard"
        android:icon="@drawable/ic_action_discard"
        android:showAsAction="ifRoom"/>
    <item
        android:id="@+id/action_new"
        android:orderInCategory="9"
        android:title="@string/action_new"
        android:icon="@drawable/ic_action_new"
        android:showAsAction="ifRoom"/>
    <item
        android:id="@+id/action_refresh"
        android:orderInCategory="10"
        android:title="@string/action_refresh"
        android:icon="@drawable/ic_action_refresh"
        android:showAsAction="ifRoom"/>
    <item
        android:id="@+id/action_login"
        android:orderInCategory="11"
        android:title="@string/action_login"
        android:showAsAction="ifRoom"/>
    <item
        android:id="@+id/action_logout"
        android:orderInCategory="12"
        android:title="@string/action_logout"/>

    <item
        android:id="@+id/action_settings"
        android:orderInCategory="99"
        android:icon="@drawable/ic_action_settings"
        android:title="@string/action_settings"/>

    <item
        android:id="@+id/action_about"
        android:orderInCategory="100"
        android:icon="@drawable/ic_action_about"
        android:title="@string/action_about"/>
    
</menu>