<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:padding="5dip">
    
    <!-- Rightend Date -->
    <TextView
        android:id="@+id/note_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:gravity="right"
        android:text="@string/note_date"
        android:textSize="12sp"
        android:textColor="#000"
        android:textStyle="italic"/>
    
    <!-- Author Name -->
    <TextView
        android:id="@+id/note_author"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toLeftOf="@id/note_author"
        android:textColor="#000"
        android:textSize="14sp"
        android:text="@string/note_author"
        android:layout_marginTop="1dip"
        android:textStyle="bold"/>
    
    <!-- Note Excerpt -->
    <TextView
        android:id="@+id/note_text"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_toLeftOf="@id/note_date"
        android:textColor="#000"
        android:textSize="16sp"
        android:layout_marginTop="1dip"
        android:layout_marginLeft="20dip"
        android:layout_below="@id/note_author"
        android:text="@string/note_text"/>
 
 
</RelativeLayout>
